<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/lucknowbackground"

    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/round_layout_box"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:gravity="center_horizontal"
            android:text="COVID19 CASES IN LUCKNOW"
            android:textSize="22sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/red_back"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvrz"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/blue_back"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/active"
                android:textColor="#F9FAFC"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                android:textColor="#F9FAFC"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/green_back"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/recovered"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/recov"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/gray_back"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="85dp"
                android:layout_height="40dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/deaths"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:gravity="center_horizontal"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnHotspot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/button_back"

        android:fontFamily="@font/baloo"
        android:text="Hotspots"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="5dp"
        android:layout_marginRight="30dp"
        android:text="Current Status:"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/rz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/red_zone"
        android:textColor="#FF2323"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/oz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/orange_zone"
        android:textColor="#FF6937"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/gz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="30dp"
        android:text="@string/green_zone"
        android:textColor="#4CAF50"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="App updates are Available! "
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:text="Click Here"
            android:textColor="#1F36C9"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>