<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:background="@color/white"


    tools:context=".MainActivity">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/white">



    <androidx.cardview.widget.CardView
        app:cardElevation="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        app:cardCornerRadius="11dp"

        app:cardUseCompatPadding="false"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="380dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:fontFamily="@font/holtwood_one_sc"
            android:gravity="center_horizontal"
            android:text="COVID19 CASES IN INDIA"
            android:textSize="22sp" />

        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="11dp"

            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_red"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:background="@drawable/red_back_list"
            android:gravity="right"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/tvrz"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:text="@string/total"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/redArrow"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:srcCompat="@drawable/arrow_upward" />

            <TextView
                android:id="@+id/dTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/glegoo"
                android:text="0"
                android:textColor="#9C0003"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/glegoo"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="11dp"

            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_blue"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:background="@drawable/blue_back_list"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:text="@string/active"
                android:textColor="#F9FAFC"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/active"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/glegoo"
                android:text="@string/_00"
                android:textColor="#F9FAFC"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="11dp"

            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_green"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:background="@drawable/green_back_list"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:text="@string/recovered"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/greenArrow"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:srcCompat="@drawable/arrow_upward_green" />

            <TextView
                android:id="@+id/dRecov"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/glegoo"
                android:gravity="right"
                android:text="0"
                android:textColor="#134415"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/recov"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/glegoo"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            app:cardElevation="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            app:cardCornerRadius="11dp"

            app:cardUseCompatPadding="false"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/layout_gray"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:background="@drawable/gray_back_list"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/glegoo"
                android:text="@string/deaths"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/greyArrow"
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                app:srcCompat="@drawable/ic_arrow_upward_black_24dp" />

            <TextView
                android:id="@+id/dDeaths"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="7dp"
                android:fontFamily="@font/glegoo"
                android:gravity="right"
                android:text="0"
                android:textColor="#1F1E1E"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/deaths"
                android:layout_width="wrap_content"
                android:layout_height="40dp"

                android:layout_gravity="right"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/glegoo"
                android:text="@string/_00"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"

            android:layout_marginBottom="20dp"
            app:cardCornerRadius="11dp"

            app:cardElevation="5dp"
            app:cardUseCompatPadding="false">

            <Button
                android:id="@+id/btnStatewise"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:background="@color/white"
                android:fontFamily="@font/holtwood_one_sc"
                android:shadowDx="5"
                android:shadowDy="5"

                android:shadowRadius="5"
                android:text="Statewise Cases"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView5"

            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/fighting_coronaccor" />


    </LinearLayout>

    </ScrollView>
</LinearLayout>
